画像サイズ情報を一部だけでも取得できるようtry-catchを分割